[gd_scene load_steps=7 format=3 uid="uid://cik30de5gaaah"]

[ext_resource type="Script" path="res://scenes/ingame_scene.gd" id="1_objyc"]
[ext_resource type="PackedScene" uid="uid://bkk87o2ooo6at" path="res://ui/overlays/fade_overlay.tscn" id="1_y6ebv"]
[ext_resource type="PackedScene" uid="uid://jyv4g54adkmo" path="res://ui/overlays/pause_overlay.tscn" id="3_8o178"]
[ext_resource type="PackedScene" uid="uid://bq4bpebcy5h4d" path="res://scenes/component_pouch/component_pouch.tscn" id="5_hsp0c"]
[ext_resource type="PackedScene" uid="uid://dksentt5dji3p" path="res://scenes/tooltip/ingredient_tooltip.tscn" id="6_qyrxf"]
[ext_resource type="PackedScene" uid="uid://sh2tec1kvvnv" path="res://scenes/cauldron/cauldron.tscn" id="6_t6kr8"]

[node name="IngameScene" type="Node2D"]
script = ExtResource("1_objyc")

[node name="UI" type="CanvasLayer" parent="."]

[node name="FadeOverlay" parent="UI" instance=ExtResource("1_y6ebv")]
unique_name_in_owner = true
visible = false

[node name="PauseOverlay" parent="UI" instance=ExtResource("3_8o178")]
unique_name_in_owner = true
process_mode = 2
visible = false

[node name="Cauldron" parent="." instance=ExtResource("6_t6kr8")]
unique_name_in_owner = true
offset_left = 55.0
offset_top = 3.0
offset_right = 488.0
offset_bottom = 204.0

[node name="ComponentPouch" parent="." instance=ExtResource("5_hsp0c")]
unique_name_in_owner = true
offset_left = 54.0
offset_top = 218.0
offset_right = 491.0
offset_bottom = 321.0

[node name="IngredientTooltip" parent="." instance=ExtResource("6_qyrxf")]
unique_name_in_owner = true
